# high-performance-api-benchmark

./: .cursorignore  .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  schemas.py  urls.py  views.py
accounts/management/commands/: fix_db_collation.py
accounts/migrations/: 0001_initial.py
api/: __init__.py  middleware.py  openapi_config.py
api/routes/: __init__.py  auth.py  health.py  roles.py  users.py  websocket.py
api_drf/: auth.py  urls.py  views.py
config/: api.py  settings.py  settings_test.py
express/: README.md  package-lock.json  package.json
express/src/: config.js  db.js  index.js  openapi.js
express/src/middleware/: timing.js
express/src/routes/: auth.js  docs.js  health.js  roles.js  users.js
go/: README.md  go.mod  go.sum  main.go
go/internal/config/: config.go
go/internal/database/: database.go
go/internal/docs/: openapi.go  swagger_html.go
go/internal/handlers/: auth.go  health.go  roles.go  users.go
go/internal/middleware/: jwt.go  timing.go
loadtest/: README.md  go.mod  main.go
nest/: README.md  package-lock.json  package.json  tsconfig.json
nest/src/: app.module.ts  main.ts
nest/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
nest/src/common/: timing.interceptor.ts
nest/src/config/: config.service.ts  config.ts
nest/src/database/: database.service.ts
nest/src/health/: health.controller.ts
nest/src/roles/: roles.controller.ts
nest/src/users/: users.controller.ts  users.service.ts
rust/: Cargo.toml  README.md
rust/src/: config.rs  db.rs  main.rs  middleware.rs  openapi.rs
rust/src/handlers/: auth.rs  health.rs  mod.rs  roles.rs  users.rs
scripts/: load_test.py  run_drf.py  run_tests.py
tests/: conftest.py  test_auth.py  test_drf.py  test_health.py  test_roles.py  test_schemas.py  test_users.py  test_websocket.py
