[project]
name = "django-bolt-test"
version = "0.1.0"
description = "Django Bolt API: JWT, pagination, search, health, WebSocket"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asgiref==3.11.0",
    "click==8.3.1",
    "django==6.0.1",
    "django-bolt==0.5.1",
    "msgspec==0.20.0",
    "pyjwt==2.11.0",
    "pyyaml==6.0.3",
    "ruff==0.14.14",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "uvloop==0.22.1",
]



[tool.pytest.ini_options]
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
markers = [
    "integration: marks tests that require a running server (deselect with '-m \"not integration\"')",
]
