[project]
name = "django-bolt-test"
version = "0.1.0"
description = "Django Bolt API: JWT, pagination, search, health, WebSocket"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anyio==4.12.1",
    "asgiref==3.11.0",
    "certifi==2026.1.4",
    "click==8.3.1",
    "django==6.0.1",
    "django-bolt==0.5.1",
    "environs==14.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "marshmallow==4.2.2",
    "msgspec==0.20.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-django==4.11.1",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "ruff==0.14.14",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "uv==0.9.29",
    "uvloop==0.22.1",
    "websockets==16.0",
]



[tool.pytest.ini_options]
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
markers = [
    "integration: marks tests that require a running server (deselect with '-m \"not integration\"')",
]
